components/form-ng/form-ng.scss
@import "../global/global";

.ring-form__update-text {
  font-size: 0;

  .ring-form__update-text-field {
    width: $ring-unit*30 !important;
  }

  .ring-form__update-text-field_long {
    width: $ring-unit*85 !important;
  }

  .ring-form__update-text-field_high {
    min-height: $ring-unit*6;
    resize: none;

    &:focus {
      transition: height 50ms ease-in-out;
    }
  }

  .ring-form__update-text__button {
    vertical-align: top;
    margin-left: $ring-unit
  }
}

